--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
 /*
 Theme Name: Alpha Tech
+Text Domain: alpha-tech
+Version: 2.0
+Description: Theme for an educational institution
+Tags:   custom-menu, custom-logo, featured-images, footer-widgets, theme-options,translation-ready, blog, right-sidebar, sticky-post, threaded-comments
+Author: Josh Kerbel
+Author URI: 
+Theme URI: 
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Tested up to: 5.0
+Requires PHP: 8
+
+
+
+*/
 */
